--- a/app/src/main/res/layout/fragment_ended_research_mercury_missions.xml
+++ b/app/src/main/res/layout/fragment_ended_research_mercury_missions.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,6 +28,12 @@
             android:text="@string/mariner_10_text"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mariner_10_image_1_small" />
 
         <TextView
             android:id="@+id/messengerTitle"
