--- a/app/src/main/res/layout/activity_mars_menu.xml
+++ b/app/src/main/res/layout/activity_mars_menu.xml
@@ -32,9 +32,10 @@
 
     <TextView
         android:id="@+id/marsRundown"
-        android:layout_width="415dp"
-        android:layout_height="129dp"
+        android:layout_width="411dp"
+        android:layout_height="107dp"
         android:text="@string/mars_rundown"
+        android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreMarsInformation"
         app:layout_constraintEnd_toEndOf="parent"
