--- a/app/src/main/res/layout/activity_sun_menu.xml
+++ b/app/src/main/res/layout/activity_sun_menu.xml
@@ -35,6 +35,7 @@
         android:layout_width="411dp"
         android:layout_height="89dp"
         android:text="@string/sun_rundown"
+        android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreSunInformation"
         app:layout_constraintEnd_toEndOf="parent"
