--- a/app/src/main/res/layout/activity_venus_menu.xml
+++ b/app/src/main/res/layout/activity_venus_menu.xml
@@ -35,6 +35,7 @@
         android:layout_width="415dp"
         android:layout_height="129dp"
         android:text="@string/venus_rundown"
+        android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreVenusInformation"
         app:layout_constraintEnd_toEndOf="parent"
