--- a/app/src/main/res/layout/activity_earth_menu.xml
+++ b/app/src/main/res/layout/activity_earth_menu.xml
@@ -32,8 +32,8 @@
 
     <TextView
         android:id="@+id/marsRundown"
-        android:layout_width="411dp"
-        android:layout_height="107dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/earth_rundown"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
@@ -45,7 +45,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="411dp"
+        android:layout_width="wrap_content"
         android:layout_height="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,11 +55,11 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/marsImage1"
+                android:id="@+id/earthImage1"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -70,7 +70,7 @@
                 tools:srcCompat="@drawable/earth_image_1_small" />
 
             <ImageView
-                android:id="@+id/marsImage2"
+                android:id="@+id/earthImage2"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -82,7 +82,7 @@
                 tools:srcCompat="@drawable/earth_image_2_small" />
 
             <ImageView
-                android:id="@+id/marsImage3"
+                android:id="@+id/earthImage3"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,7 +94,7 @@
                 tools:srcCompat="@drawable/earth_image_3_small" />
 
             <ImageView
-                android:id="@+id/marsImage4"
+                android:id="@+id/earthImage4"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -106,7 +106,7 @@
                 tools:srcCompat="@drawable/earth_image_4_small" />
 
             <ImageView
-                android:id="@+id/marsImage5"
+                android:id="@+id/earthImage5"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
