--- a/app/src/main/res/layout/activity_jupiter_menu.xml
+++ b/app/src/main/res/layout/activity_jupiter_menu.xml
@@ -4,22 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VenusMenu">
+    tools:context=".JupiterMenu">
 
     <Button
-        android:id="@+id/buttonLearnMoreVenusInformation"
+        android:id="@+id/buttonLearnMoreJupiterInformation"
         android:layout_width="174dp"
         android:layout_height="47dp"
         android:text="@string/learn_more"
         android:textColor="@android:color/background_dark"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/endedMissionsJupiter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/venusRundown" />
+        app:layout_constraintTop_toBottomOf="@+id/jupiterRundown" />
 
     <Button
-        android:id="@+id/buttonLearnMoreVenusianMissions"
+        android:id="@+id/buttonLearnMoreJovianMissions"
         android:layout_width="174dp"
         android:layout_height="47dp"
         android:text="@string/learn_more"
@@ -28,52 +28,52 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/ongoingMissionsJupiter" />
 
     <TextView
-        android:id="@+id/venusRundown"
+        android:id="@+id/jupiterRundown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/venus_rundown"
+        android:text="@string/jupiter_rundown"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreVenusInformation"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreJupiterInformation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/endedMissionsJupiter"
         android:layout_width="364dp"
         android:layout_height="52dp"
         android:inputType="none"
-        android:text="@string/ended_venus_mission_count"
+        android:text="@string/ended_jupiter_mission_count"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/ongoingMissionsJupiter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreVenusInformation" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreJupiterInformation" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ongoingMissionsJupiter"
         android:layout_width="364dp"
         android:layout_height="52dp"
         android:inputType="none"
-        android:text="@string/ongoing_venus_mission_count"
+        android:text="@string/ongoing_jupiter_mission_count"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreVenusianMissions"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLearnMoreJovianMissions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/endedMissionsJupiter" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -83,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreVenusianMissions">
+        app:layout_constraintTop_toBottomOf="@+id/buttonLearnMoreJovianMissions">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -91,59 +91,59 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/venusImage1"
+                android:id="@+id/jupiterImage1"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/venus_image_small_1"
-                tools:srcCompat="@drawable/venus_image_small_1" />
+                app:srcCompat="@drawable/jupiter_image_1_small"
+                tools:srcCompat="@drawable/jupiter_image_1_small" />
 
             <ImageView
-                android:id="@+id/venusImage2"
+                android:id="@+id/jupiterImage2"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/venus_image_small_2"
-                tools:srcCompat="@drawable/venus_image_small_2" />
+                app:srcCompat="@drawable/jupiter_image_2_small"
+                tools:srcCompat="@drawable/jupiter_image_2_small" />
 
             <ImageView
-                android:id="@+id/venusImage3"
+                android:id="@+id/jupiterImage3"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/venus_image_small_3"
-                tools:srcCompat="@drawable/venus_image_small_3" />
+                app:srcCompat="@drawable/jupiter_image_3_small"
+                tools:srcCompat="@drawable/jupiter_image_3_small" />
 
             <ImageView
-                android:id="@+id/venusImage4"
+                android:id="@+id/jupiterImage4"
                 android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/venus_image_small_4"
-                tools:srcCompat="@drawable/venus_image_small_4" />
+                app:srcCompat="@drawable/jupiter_image_4_small"
+                tools:srcCompat="@drawable/jupiter_image_4_small" />
 
             <ImageView
-                android:id="@+id/venusImage5"
-                android:layout_width="wrap_content"
+                android:id="@+id/jupiterImage5"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/venus_image_small_5"
-                tools:srcCompat="@drawable/venus_image_small_5" />
+                app:srcCompat="@drawable/jupiter_image_5_small"
+                tools:srcCompat="@drawable/jupiter_image_5_small" />
 
         </LinearLayout>
     </HorizontalScrollView>
