--- a/app/src/main/res/layout/activity_mars_details.xml
+++ b/app/src/main/res/layout/activity_mars_details.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/sizesAndDistancesSectionTitleMarsDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:importantForAutofill="no"
                 android:inputType="none"
@@ -32,6 +33,7 @@
                 android:id="@+id/marsSizesAndDistancesText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:inputType="none"
                 android:text="@string/mars_sizes_and_distances_text"
                 android:textAlignment="center"
@@ -42,6 +44,7 @@
                 android:id="@+id/orbitAndRotationSectionTitleMarsDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:inputType="none"
                 android:text="@string/orbit_and_rotation"
@@ -63,6 +66,7 @@
                 android:id="@+id/historyOfMarsSectionTitleSunDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:inputType="none"
                 android:text="@string/history_of_the_body"
@@ -84,6 +88,7 @@
                 android:id="@+id/internalStructureSectionTitleMarsDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:inputType="none"
                 android:text="@string/internal_structure"
@@ -112,6 +117,7 @@
                 android:id="@+id/atmosphereOfTheSunSectionTitleMarsDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:inputType="none"
                 android:text="@string/atmosphere"
