--- a/app/src/main/res/layout/activity_sun_menu.xml
+++ b/app/src/main/res/layout/activity_sun_menu.xml
@@ -32,8 +32,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="411dp"
-        android:layout_height="89dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/sun_rundown"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
@@ -77,7 +77,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="411dp"
+        android:layout_width="wrap_content"
         android:layout_height="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
