--- a/app/src/main/res/layout/fragment_ended_research_jupiter_missions.xml
+++ b/app/src/main/res/layout/fragment_ended_research_jupiter_missions.xml
@@ -65,56 +65,56 @@
         android:textColor="@android:color/background_dark" />
 
     <TextView
-        android:id="@+id/mars2mv31Title"
+        android:id="@+id/voyager2Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/voyager_2"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/mars2mv31Text"
+        android:id="@+id/voyager2Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/voyager_2_text"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark" />
 
     <TextView
-        android:id="@+id/mars1Title"
+        android:id="@+id/galileoTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/galileo"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/mars1Text"
+        android:id="@+id/galileoText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/galileo_text"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark" />
 
     <TextView
-        android:id="@+id/mariner3Title"
+        android:id="@+id/cassiniHuygensTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/cassiniHuygens"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/mariner3Text"
+        android:id="@+id/cassiniHuygensText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:text="@string/cassiniHuygens_Text"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark" />
 
